2011-03-09  Xavier Perseguers  <xavier@causal.ch>

	* Updated screenshots in documentation

2011-03-08  Xavier Perseguers  <xavier@causal.ch>

	* Added DIVs and classes to templates
	* Fixed minor glitches in the documentation when rendered as HTML on TER

2011-03-07  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.9.0
	* Added fallback for web service parameter eCHmunicipalityID
	* Updated documentation with inclusion of static template

2011-03-02  Xavier Perseguers  <xavier@causal.ch>

	* Refactored Helper classes to be part of Utility namespace
	* Renamed eCHmunicipalityID into organizationID

2011-02-25  Xavier Perseguers  <xavier@causal.ch>

	* Updated documentation

2011-02-24  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.8.0 (first release to TER)
	* Added class on h1 in list mode
	* Updated documentation with information about RealURL autoconfiguration
	* Fixed blank page when activating debug in TYPO3 < 4.5
	* Changed link position for form documents/legal regulation items
	* Slightly restructured documentation, started Tutorial chapter

2011-02-19  Xavier Perseguers  <xavier@causal.ch>

	* Removed link to useless single view for audiences and views in list view
	* Implemented hook for RealURL auto-configuration
	* Services are always alphabetically sorted (by name)
	* Now sorting views, domains, topics and services in FlexForm
	* Added enable flag to include services from swiss confederation
	* Removed duplicate services when caching lifetime is extremely low
	* Reorganized include for TYPO3 < 4.5

2011-02-18  Xavier Perseguers  <xavier@causal.ch>

	* Added labels for version id and version name
	* Added exception catch for incomplete service (no contact part)

2011-02-18  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.7.1
	* Added class around service id in h1
	* Added back to list block for services in SINGLE mode
	* Added css span around service block number
	* Included confederation-level services
