@@ -513,10 +513,17 @@ class tx_egovapi_controller_pi1_templateRenderer extends tx_egovapi_controller_p
 		}
 
 		$topic = $service->getTopic();
-		$this->subparts['TOPIC_LINK_DETAIL'] = $this->getLinkSingleParts($topic);
-		$this->subparts['SERVICE_LINK_TOPICS'] = $this->getParentLevelLinkParts('topic', 'domain', $topic->getDomain()->getId());
-		$this->subparts['SERVICE_LINK_TOPIC'] = $this->getParentLevelLinkParts('domain', 'domain', $topic->getDomain()->getId(), 'single');
-		$this->subparts['SERVICE_LINK_SERVICES'] = $this->getParentLevelLinkParts('service', 'domain', $topic->getDomain()->getId());
+		if ($topic) {
+			$this->subparts['TOPIC_LINK_DETAIL'] = $this->getLinkSingleParts($topic);
+			$this->subparts['SERVICE_LINK_TOPICS'] = $this->getParentLevelLinkParts('topic', 'domain', $topic->getDomain()->getId());
+			$this->subparts['SERVICE_LINK_TOPIC'] = $this->getParentLevelLinkParts('domain', 'domain', $topic->getDomain()->getId(), 'single');
+			$this->subparts['SERVICE_LINK_SERVICES'] = $this->getParentLevelLinkParts('service', 'domain', $topic->getDomain()->getId());
+		} else {
+			$this->subparts['TOPIC_LINK_DETAIL'] = '';
+			$this->subparts['SERVICE_LINK_TOPICS'] = '';
+			$this->subparts['SERVICE_LINK_TOPIC'] = '';
+			$this->subparts['SERVICE_LINK_SERVICES'] = '';
+		}
 
 			// If parent level is not allowed and target for parent list or single mode
 			// is the same as current page, then remove content of HAS_PARENT subpart
